# agentic-sdlc

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  run_server.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adr-request.yml  bug.yml  feature.yml  tech-debt.yml
.github/prompts/: repo-bootstrap.prompt.md
.github/workflows/: ci.yml  reusable-quality-gates.yml
docs/demos/: demo-01-meeting-to-requirements.md  demo-02-requirements-to-issues.md  demo-03-issue-to-pr.md  demo-04-standards-guardrails.md
docs/meeting-notes/: 2026-04-kickoff.md
docs/requirements/: adr-001-event-model.md  issue-backlog.md  req-001-orchestrator.md
docs/standards/: coding-standards.md  observability-standards.md  prompting-playbook.md  testing-standards.md
docs/training/: getting-started-guide.md
src/: __init__.py  main.py
src/api/: main.py  services.py
src/domain/: models.py
src/forgeops_orchestrator/: __init__.py  devserver.py  main.py  models.py  services.py
src/notifications/: service.py
src/rules/: engine.py
src/storage/: repository.py
tests/: test_devserver.py  test_events.py  test_ingestion_api.py
